--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/TabbedLayout.fxml
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/TabbedLayout.fxml
@@ -2,12 +2,18 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextArea?>
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.111" fx:controller="javafxsimpleplanner.TabbedLayoutController">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxsimpleplanner.TabbedLayoutController">
     <stylesheets>
         <URL value="@tabbedlayout.css" />
     </stylesheets>
@@ -16,7 +22,31 @@
         <tabs>
           <Tab text="Day View">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <SplitPane dividerPositions="0.29797979797979796" layoutY="32.0" prefHeight="331.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+                          <items>
+                            <AnchorPane minHeight="300.0" minWidth="200.0" prefHeight="304.0" prefWidth="171.0">
+                                 <children>
+                                    <TextArea fx:id="dayTextArea" layoutY="29.0" minWidth="150.0" prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.0" />
+                                    <DatePicker fx:id="datePicker" layoutY="2.0" prefHeight="25.0" prefWidth="197.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="2.0" />
+                                 </children>
+                              </AnchorPane>
+                            <AnchorPane minHeight="160.0" minWidth="300.0" prefHeight="160.0" prefWidth="100.0">
+                                 <children>
+                                    <TableView fx:id="dayTableView" layoutY="30.0" minWidth="200.0" prefHeight="299.0" prefWidth="392.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="30.0">
+                                      <columns>
+                                        <TableColumn fx:id="dayTimeColomun" prefWidth="75.0" text="Time" />
+                                        <TableColumn fx:id="dayTaskColumn" prefWidth="209.0" text="Task" />
+                                          <TableColumn fx:id="dayStateColumn" prefWidth="65.0" text="State" />
+                                      </columns>
+                                    </TableView>
+                                    <Label fx:id="dayTodayLabel" alignment="CENTER" layoutY="6.0" prefHeight="17.0" prefWidth="392.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="6.0" />
+                                 </children>
+                              </AnchorPane>
+                          </items>
+                        </SplitPane>
+                     </children></AnchorPane>
             </content>
           </Tab>
           <Tab text="Week View">
