--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/TabbedLayout.fxml
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/TabbedLayout.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -52,12 +53,43 @@
           </Tab>
           <Tab text="Week View">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="weekViewTable" prefHeight="365.0" prefWidth="601.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="197.0" AnchorPane.topAnchor="0.0">
+                          <columns>
+                            <TableColumn fx:id="day0WeekTableCol" prefWidth="75.0" />
+                            <TableColumn fx:id="day1WeekTableCol" prefWidth="75.0" text="Monday" />
+                              <TableColumn fx:id="day2WeekTableCol" prefWidth="75.0" text="Tuesday" />
+                              <TableColumn fx:id="day3WeekTableCol" prefWidth="75.0" text="Wednesday" />
+                              <TableColumn fx:id="day4WeekTableCol" prefWidth="75.0" text="Thursday" />
+                              <TableColumn fx:id="day5WeekTableCol" prefWidth="75.0" text="Friday" />
+                              <TableColumn fx:id="day6WeekTableCol" prefWidth="75.0" text="Saturday" />
+                              <TableColumn fx:id="day7WeekTableCol" prefWidth="75.0" text="Sunday" />
+                          </columns>
+                        </TableView>
+                        <ListView fx:id="weekGoalsList" layoutX="601.0" layoutY="24.0" prefHeight="342.0" prefWidth="200.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.rightAnchor="-3.0" AnchorPane.topAnchor="24.0" />
+                        <Label alignment="CENTER" layoutX="601.0" layoutY="6.0" prefHeight="17.0" prefWidth="198.0" text="Week Goals" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="6.0" />
+                     </children></AnchorPane>
             </content>
           </Tab>
             <Tab text="Month View">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <TableView fx:id="monthViewTable" prefHeight="366.0" prefWidth="555.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="243.0" AnchorPane.topAnchor="0.0">
+                          <columns>
+                            <TableColumn prefWidth="75.0" text="Monday" />
+                            <TableColumn prefWidth="75.0" text="Tuesday" />
+                              <TableColumn prefWidth="75.0" text="Wednesday" />
+                              <TableColumn prefWidth="75.0" text="Thursday" />
+                              <TableColumn prefWidth="75.0" text="Friday" />
+                              <TableColumn prefWidth="75.0" text="Saturday" />
+                              <TableColumn prefWidth="75.0" text="Sunday" />
+                          </columns>
+                        </TableView>
+                        <ListView layoutX="555.0" layoutY="24.0" prefHeight="341.0" prefWidth="243.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0" />
+                        <Label alignment="CENTER" layoutX="555.0" layoutY="6.0" prefHeight="17.0" prefWidth="243.0" text="Month Tasks" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="6.0" />
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab text="Year View">
