--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/TabbedLayout.fxml
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/TabbedLayout.fxml
@@ -1,6 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
+<?import javafx.scene.chart.BarChart?>
+<?import javafx.scene.chart.CategoryAxis?>
+<?import javafx.scene.chart.NumberAxis?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
@@ -15,7 +18,7 @@
 <?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="798.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxsimpleplanner.TabbedLayoutController">
+<AnchorPane id="AnchorPane" minHeight="-Infinity" minWidth="-Infinity" prefHeight="490.0" prefWidth="813.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxsimpleplanner.TabbedLayoutController">
     <stylesheets>
         <URL value="@tabbedlayout.css" />
     </stylesheets>
@@ -30,7 +33,7 @@
                           <items>
                             <AnchorPane minHeight="300.0" minWidth="200.0" prefHeight="304.0" prefWidth="171.0">
                                  <children>
-                                    <TextArea fx:id="dayTextArea" layoutY="29.0" minWidth="150.0" prefHeight="300.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.0" />
+                                    <TextArea fx:id="dayTextArea" layoutY="29.0" minWidth="150.0" prefHeight="300.0" prefWidth="200.0" promptText="Write some extra note" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.0" />
                                     <DatePicker fx:id="datePicker" layoutY="2.0" prefHeight="25.0" prefWidth="197.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="3.0" AnchorPane.topAnchor="2.0" />
                                  </children>
                               </AnchorPane>
@@ -76,25 +79,42 @@
               <content>
                 <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="monthViewTable" prefHeight="366.0" prefWidth="555.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="243.0" AnchorPane.topAnchor="0.0">
+                        <TableView fx:id="monthViewTable" prefHeight="366.0" prefWidth="583.0" AnchorPane.bottomAnchor="-1.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="215.0" AnchorPane.topAnchor="0.0">
                           <columns>
-                            <TableColumn prefWidth="75.0" text="Monday" />
-                            <TableColumn prefWidth="75.0" text="Tuesday" />
-                              <TableColumn prefWidth="75.0" text="Wednesday" />
-                              <TableColumn prefWidth="75.0" text="Thursday" />
-                              <TableColumn prefWidth="75.0" text="Friday" />
-                              <TableColumn prefWidth="75.0" text="Saturday" />
-                              <TableColumn prefWidth="75.0" text="Sunday" />
+                            <TableColumn fx:id="day0MonthViewColumn" prefWidth="75.0" />
+                            <TableColumn fx:id="day1MonthViewColumn" prefWidth="75.0" text="Monday" />
+                              <TableColumn fx:id="day2MonthViewColumn" prefWidth="75.0" text="Tuesday" />
+                              <TableColumn fx:id="day3MonthViewColumn" prefWidth="75.0" text="Wednesday" />
+                              <TableColumn fx:id="day4MonthViewColumn" prefWidth="75.0" text="Thursday" />
+                              <TableColumn fx:id="day5MonthViewColumn" prefWidth="75.0" text="Friday" />
+                              <TableColumn fx:id="day6MonthViewColumn" prefWidth="75.0" text="Saturday" />
+                              <TableColumn fx:id="day7MonthViewColumn" prefWidth="75.0" text="Sunday" />
                           </columns>
                         </TableView>
-                        <ListView layoutX="555.0" layoutY="24.0" prefHeight="341.0" prefWidth="243.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0" />
-                        <Label alignment="CENTER" layoutX="555.0" layoutY="6.0" prefHeight="17.0" prefWidth="243.0" text="Month Tasks" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="6.0" />
+                        <ListView fx:id="monthViewGoalsList" layoutX="555.0" layoutY="24.0" prefHeight="341.0" prefWidth="215.0" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="24.0" />
+                        <Label alignment="CENTER" layoutX="555.0" layoutY="6.0" prefHeight="17.0" prefWidth="215.0" text="Month Goals" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="6.0" />
                      </children></AnchorPane>
               </content>
             </Tab>
             <Tab text="Year View">
               <content>
-                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                     <children>
+                        <BarChart fx:id="yearViewChart" prefHeight="421.0" prefWidth="579.0" title="Tasks Chart" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="234.0" AnchorPane.topAnchor="0.0">
+                          <xAxis>
+                            <CategoryAxis side="BOTTOM" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis side="LEFT" />
+                          </yAxis>
+                        </BarChart>
+                        <TableView fx:id="yearViewTasksTable" layoutX="579.0" prefHeight="423.0" prefWidth="235.0" AnchorPane.bottomAnchor="-2.0" AnchorPane.rightAnchor="-1.0" AnchorPane.topAnchor="0.0">
+                          <columns>
+                            <TableColumn fx:id="yearViewTaskNameCol" prefWidth="75.0" text="Task Name" />
+                            <TableColumn fx:id="yearViewProgressCol" prefWidth="75.0" text="Progress" />
+                          </columns>
+                        </TableView>
+                     </children></AnchorPane>
               </content>
             </Tab>
             <Tab text="Goals">
