--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/AddNewTaskLayout.fxml
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/AddNewTaskLayout.fxml
@@ -1,34 +1,45 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.URL?>
-<?import javafx.scene.control.DatePicker?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="600.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxsimpleplanner.AddNewTaskLayoutController">
+<AnchorPane id="AnchorPane" prefHeight="353.0" prefWidth="566.0" styleClass="mainFxmlClass" xmlns="http://javafx.com/javafx/8.0.111" xmlns:fx="http://javafx.com/fxml/1" fx:controller="javafxsimpleplanner.AddNewTaskLayoutController">
     <stylesheets>
         <URL value="@addnewtasklayout.css" />
     </stylesheets>
    <children>
-      <GridPane layoutX="134.0" layoutY="88.0" prefHeight="225.0" prefWidth="332.0">
+      <GridPane fx:id="gridView" alignment="CENTER_LEFT" layoutX="25.0" layoutY="104.0" prefHeight="146.0" prefWidth="530.0" AnchorPane.bottomAnchor="103.0" AnchorPane.topAnchor="104.0">
         <columnConstraints>
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="400.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <TextField promptText="Title" GridPane.columnIndex="1" />
+            <TextField fx:id="titleTextField" promptText="Title" GridPane.columnIndex="1" />
             <Label text="Task title" />
-            <DatePicker GridPane.rowIndex="1" />
+            <Label text="From" GridPane.rowIndex="1" />
+            <Label text="To" GridPane.rowIndex="2" />
+            <Label text="Importance" GridPane.rowIndex="3" />
+            <Label text="Progress" GridPane.rowIndex="4" />
+            <ChoiceBox fx:id="choiceBox" prefHeight="25.0" prefWidth="421.0" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ProgressBar fx:id="progressSlider" prefHeight="18.0" prefWidth="467.0" progress="0.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
+      <Button fx:id="increaseBtn" layoutX="522.0" layoutY="263.0" mnemonicParsing="false" onMouseClicked="#increaseProgressBar" text="&gt;&gt;" />
+      <Button fx:id="decreaseBtn" layoutX="140.0" layoutY="263.0" mnemonicParsing="false" onMouseClicked="#decreaseProgressBar" text="&lt;&lt;" />
    </children>
 </AnchorPane>
