--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/addnewtasklayout.css
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/addnewtasklayout.css
@@ -5,3 +5,11 @@
 .mainFxmlClass {
 
 }
+.progress-bar .bar {
+    -fx-background-color:
+        -fx-box-border,
+        linear-gradient(to bottom, derive(-fx-accent,95%), derive(-fx-accent,10%)),
+        linear-gradient(to bottom, derive(-fx-accent,38%), -fx-accent);
+    -fx-background-insets: 0, 1, 2;
+    -fx-padding: 0.416667em; /* 5 */
+}
