--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/tabbedlayout.css
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/tabbedlayout.css
@@ -5,3 +5,18 @@
 .mainFxmlClass {
 
 }
+.progress-bar .bar {
+    -fx-background-color:
+        -fx-box-border,
+        linear-gradient(to bottom, derive(-fx-accent,95%), derive(-fx-accent,10%)),
+        linear-gradient(to bottom, derive(-fx-accent,38%), -fx-accent);
+    -fx-background-insets: 0, 1, 2;
+    -fx-padding: 0.416667em; /* 5 */
+}
+
+.tooltip{
+    -fx-background-color: #cccccc;
+    -fx-text-fill: #000;
+    -fx-background-radius: 2px;
+    -fx-font-size: 10pt;
+}
