--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/TabbedLayout.fxml
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/TabbedLayout.fxml
@@ -49,7 +49,7 @@
                                       </columns>
                                     </TableView>
                                     <Label fx:id="dayTodayLabel" alignment="CENTER" layoutX="96.0" layoutY="6.0" prefHeight="17.0" prefWidth="374.0" AnchorPane.leftAnchor="96.0" AnchorPane.rightAnchor="96.0" AnchorPane.topAnchor="6.0" />
-                                    <Button fx:id="editDayTaskBtn" layoutX="474.0" layoutY="2.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="92.0" text="Edit" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="2.0" />
+                                    <Button fx:id="editDayTaskBtn" layoutX="474.0" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#editDayTaskMouseClicked" prefHeight="25.0" prefWidth="92.0" text="Edit" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="2.0" />
                                     <Button fx:id="addNewDayTaskBtn" layoutY="2.0" mnemonicParsing="false" onMouseClicked="#addNewDayTaskBtn" prefHeight="25.0" prefWidth="93.0" text="Add New" AnchorPane.topAnchor="2.0" />
                                  </children>
                               </AnchorPane>
