--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/AddNewTaskLayout.fxml
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/AddNewTaskLayout.fxml
@@ -2,7 +2,7 @@
 
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
@@ -37,10 +37,10 @@
             <Label text="To" GridPane.rowIndex="2" />
             <Label text="Importance" GridPane.rowIndex="4" />
             <Label text="Progress" GridPane.rowIndex="5" />
-            <ChoiceBox fx:id="choiceBox" prefHeight="25.0" prefWidth="421.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
             <ProgressBar fx:id="progressSlider" prefHeight="18.0" prefWidth="467.0" progress="0.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
             <Label text="Note" GridPane.rowIndex="3" />
             <TextArea fx:id="detailsTextArea" prefHeight="23.0" prefWidth="415.0" promptText="Details" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+            <ComboBox fx:id="priorityCombo" prefHeight="25.0" prefWidth="444.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
          </children>
       </GridPane>
       <Button fx:id="increaseBtn" layoutX="515.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#increaseProgressBar" text="&gt;&gt;" />
