--- a/JavaFXSimplePlanner/src/javafxsimpleplanner/AddNewTaskLayout.fxml
+++ b/JavaFXSimplePlanner/src/javafxsimpleplanner/AddNewTaskLayout.fxml
@@ -3,6 +3,7 @@
 <?import java.net.URL?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.ProgressBar?>
 <?import javafx.scene.control.TextArea?>
@@ -17,13 +18,14 @@
         <URL value="@addnewtasklayout.css" />
     </stylesheets>
    <children>
-      <GridPane fx:id="gridView" alignment="CENTER_LEFT" layoutX="18.0" layoutY="29.0" prefHeight="211.0" prefWidth="530.0" AnchorPane.bottomAnchor="113.0" AnchorPane.topAnchor="29.0">
+      <GridPane fx:id="gridView" alignment="CENTER_LEFT" layoutX="18.0" layoutY="22.0" prefHeight="226.0" prefWidth="530.0" AnchorPane.bottomAnchor="105.0" AnchorPane.topAnchor="22.0">
         <columnConstraints>
           <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="400.0" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
             <RowConstraints minHeight="60.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -33,19 +35,21 @@
          <children>
             <TextField fx:id="titleTextField" promptText="Title" GridPane.columnIndex="1" />
             <Label text="Task title" />
-            <Label text="From" GridPane.rowIndex="1" />
-            <Label text="To" GridPane.rowIndex="2" />
-            <Label text="Importance" GridPane.rowIndex="4" />
-            <Label text="Progress" GridPane.rowIndex="5" />
-            <ProgressBar fx:id="progressSlider" prefHeight="18.0" prefWidth="467.0" progress="0.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
-            <Label text="Note" GridPane.rowIndex="3" />
-            <TextArea fx:id="detailsTextArea" prefHeight="23.0" prefWidth="415.0" promptText="Details" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-            <ComboBox fx:id="priorityCombo" prefHeight="25.0" prefWidth="444.0" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <Label text="From" GridPane.rowIndex="2" />
+            <Label text="To" GridPane.rowIndex="3" />
+            <Label text="Importance" GridPane.rowIndex="5" />
+            <Label text="Progress" GridPane.rowIndex="6" />
+            <ProgressBar fx:id="progressSlider" prefHeight="18.0" prefWidth="467.0" progress="0.0" GridPane.columnIndex="1" GridPane.rowIndex="6" />
+            <Label text="Note" GridPane.rowIndex="4" />
+            <TextArea fx:id="detailsTextArea" prefHeight="23.0" prefWidth="415.0" promptText="Details" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+            <ComboBox fx:id="priorityCombo" prefHeight="25.0" prefWidth="444.0" GridPane.columnIndex="1" GridPane.rowIndex="5" />
+            <Label fx:id="dateLabel" GridPane.rowIndex="1" />
+            <DatePicker fx:id="datePicker" prefHeight="25.0" prefWidth="427.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
       </GridPane>
-      <Button fx:id="increaseBtn" layoutX="515.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#increaseProgressBar" text="&gt;&gt;" />
-      <Button fx:id="decreaseBtn" layoutX="132.0" layoutY="253.0" mnemonicParsing="false" onMouseClicked="#decreaseProgressBar" text="&lt;&lt;" />
-      <Button fx:id="applyBtn" layoutX="453.0" layoutY="314.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" text="Apply" />
+      <Button fx:id="increaseBtn" layoutX="515.0" layoutY="256.0" mnemonicParsing="false" onMouseClicked="#increaseProgressBar" text="&gt;&gt;" />
+      <Button fx:id="decreaseBtn" layoutX="133.0" layoutY="256.0" mnemonicParsing="false" onMouseClicked="#decreaseProgressBar" text="&lt;&lt;" />
+      <Button fx:id="applyBtn" layoutX="458.0" layoutY="314.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" text="Apply" />
       <Button fx:id="cancelBtn" layoutX="18.0" layoutY="314.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="90.0" text="Cancel" />
    </children>
 </AnchorPane>
